test/fixtures/install-consumer/negative/forbidden_bridge.ml
(** This fixture must not compile from an installed [temporal-sdk] package. *)

module Private = Temporal_core_bridge

let () = ()
